# rust-labs

channel-failover/: Cargo.toml
channel-failover/src/: client.rs  consumer.rs  main.rs
metrics/: Cargo.toml
metrics-registry/: Cargo.toml
metrics-registry/src/: lib.rs  main.rs  metrics.rs
metrics/src/: main.rs
mpsc-dispatch/: Cargo.toml  README.md
mpsc-dispatch/src/: main.rs
panic-hook/: Cargo.toml
panic-hook/src/: main.rs
